lib/tests/fixtures/compiler/parser/funct_bad_array_variable_ref.pp
function good($x = 0, $y = [$x])
{

}

function bad($x = [$y], $y = 0)
{

}
